<!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">French Gastronomy Quizz</string>
    <string name="name">Name</string>
    <string name="frenchFlagDescription">A french flag</string>
    <string name="bonAppetit" translatable="false">Bon appétit!</string>
    <string name="plate">A plate</string>
    <string name="send">send</string>
    <string name="reset">Reset</string>
    <string name="usernameEmpty">Can you please fill your name</string>
    <string name="resultMessage">Congratulations %1$s!\nYou have %2$d right(s) answers on %3$d</string>
    <string name="quizzReseted">Quizz reseted!</string>
    <string name="frenchCity">French City</string>

    <!-- question 1 -->
    <string name="one" translatable="false">1</string>
    <string name="q1">With which cheeses the fondue savoyarde is prepared?</string>
    <string name="q1c1" translatable="false">Comté</string>
    <string name="q1c2" translatable="false">Beaufort</string>
    <string name="q1c3" translatable="false">Camenbert</string>
    <string name="q1c4" translatable="false">Emmental</string>

    <!-- question 2 -->
    <string name="two" translatable="false">2</string>
    <string name="q2">Where the choucroute come from?</string>
    <string name="q2c1" translatable="false">Aquitaine</string>
    <string name="q2c2" translatable="false">Midi Pyrénée</string>
    <string name="q2c3" translatable="false">Alsace</string>
    <string name="q2c4" translatable="false">Auvergne</string>

    <!-- question 3 -->
    <string name="three" translatable="false">3</string>
    <string name="q3">What compose the macaron?</string>
    <string name="q3c1">Almond powder</string>
    <string name="q3c2">Icing sugar</string>
    <string name="q3c3">Sugar</string>
    <string name="q3c4">Egg whites</string>

    <!-- question 4 -->
    <string name="four" translatable="false">4</string>
    <string name="q4">What name is the sparkling wine produced around the city of Reims?</string>
    <string name="q4c1">The champagne</string>
    <string name="q4c2">The clairette of Dié</string>
    <string name="q4c3">The crémant</string>
    <string name="q4c4">The wine of Seyssel</string>

    <!-- question 5 -->
    <string name="five" translatable="false">5</string>
    <string name="q5">What is the symbol of the French breakfast?</string>
    <string name="q5c1">The bread</string>
    <string name="q5c2">The croissant</string>
    <string name="q5c3">The ham</string>
    <string name="q5c4">The cheese</string>

    <!-- question 6 -->
    <string name="six" translatable="false">6</string>
    <string name="q6">Who do you ask for advice on choosing wine at the restaurant?</string>
    <string name="q6c1">To the grower</string>
    <string name="q6c2">To the wine waiter</string>
    <string name="q6c3">To the oenologist</string>
    <string name="q6c4">To the cellar master</string>

    <!-- question 7 -->
    <string name="seven" translatable="false">7</string>
    <string name="q7">What part of the body refers to the word "gastronomy"?</string>
    <string name="q7c1">The mouth</string>
    <string name="q7c2">The palate</string>
    <string name="q7c3">The stomach</string>
    <string name="q7c4">The tongue</string>

    <!-- question 8 -->
    <string name="eight" translatable="false">8</string>
    <string name="q8">What Breton speciality is prepared with eggs, flour and milk?</string>
    <string name="q8c1">The crepe</string>
    <string name="q8c2">The aligot</string>
    <string name="q8c3">The Paris-Brest</string>
    <string name="q8c4">The sablé</string>

    <!-- question 9 -->
    <string name="nine" translatable="false">9</string>
    <string name="q9">What traditional dish is served in France on Christmas Eve?</string>
    <string name="q9c1">The brown Turkey</string>
    <string name="q9c2">The cep omelette</string>
    <string name="q9c3">The fried carp</string>
    <string name="q9c4">The duck with orange</string>

    <!-- question 10 -->
    <string name="ten" translatable="false">10</string>
    <string name="q10">Which french city the most famous vine is coming from?</string>
    <string name="q10Answer" translatable="false">Bordeaux</string>

</resources>
