<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/plate"
                android:scaleType="centerCrop"
                android:src="@drawable/plate" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/bonAppetit"
                android:layout_toStartOf="@id/bonAppetit"
                android:contentDescription="@string/frenchFlagDescription"
                android:rotation="-45"
                android:scaleX="-1"
                android:src="@drawable/french_flag" />

            <LinearLayout
                android:id="@+id/bonAppetit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/leftRightMargin"
                    android:layout_marginRight="@dimen/leftRightMargin"
                    android:gravity="center_horizontal"
                    android:text="@string/bonAppetit"
                    android:textSize="@dimen/headerSize" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:maxLength="14" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/bonAppetit"
                android:layout_toRightOf="@id/bonAppetit"
                android:contentDescription="@string/frenchFlagDescription"
                android:rotation="45"
                android:src="@drawable/french_flag" />

        </RelativeLayout>

        <LinearLayout
            style="@style/quizzMarginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/leftRightMargin">

                <TextView
                    style="@style/numberQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/q1c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1c1" />

            <CheckBox
                android:id="@+id/q1c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1c2" />

            <CheckBox
                android:id="@+id/q1c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1c3" />

            <CheckBox
                android:id="@+id/q1c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1c4" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>